maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:4: error: illegal start of simple expression
    var j = random3()
    ^RandomMouseMaze:5: error: illegal start of simple expression
    if()
       ^RandomMouseMaze:6: error: ')' expected but '}' found.
} 
^