maze.randommouse.RandomMouseMaze.scala.code
override def run() {
  while(!estSurBiscuit)
    var j = random3()
  	if()
}